// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test the sample component 1`] = `
<div>
  <h2>
    You are 
    logged out
  </h2>
  <button
    className="button"
    onClick={[Function]}
  >
    Sign in
  </button>
</div>
`;

exports[`Test the sample component 2`] = `
<div>
  <h2>
    You are 
    logged in
  </h2>
  <button
    className="button button-secondary"
    onClick={[Function]}
  >
    Sign out
  </button>
</div>
`;

exports[`Test the sample component 3`] = `
<div>
  <h2>
    You are 
    logged out
  </h2>
  <button
    className="button"
    onClick={[Function]}
  >
    Sign in
  </button>
</div>
`;
